--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -116,8 +116,8 @@
             32 - Camera
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-    <integer name="config_deviceHardwareKeys">72</integer>
+         config to 7. 
+    <integer name="config_deviceHardwareKeys">72</integer> -->
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
@@ -130,8 +130,8 @@
             32 - Camera
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-    <integer name="config_deviceHardwareWakeKeys">64</integer>
+         config to 7. 
+    <integer name="config_deviceHardwareWakeKeys">72</integer> -->
 
     <!-- ############################################################## -->
     <!-- ### DISPLAY                                                    -->
@@ -201,10 +201,10 @@
     <bool name="config_intrusiveNotificationLed">true</bool>
 
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">true</bool>
+    <!--<bool name="config_intrusiveBatteryLed">true</bool>-->
 
-    <!-- Boolean to enable stk functionality on Samsung phones -->
-    <bool name="config_samsung_stk">true</bool>
+    <!-- Boolean to enable stk functionality on Samsung phones 
+    <bool name="config_samsung_stk">true</bool> -->
     
     <!-- Doze (Ambient display) -->
     <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
@@ -222,7 +222,7 @@
     <bool name="config_wifiDisplaySupportsProtectedBuffers">true</bool>
 
     <!-- Our modem doesn't support this query yet -->
-    <string name="config_radio_access_family">GSM|WCDMA|LTE</string>
+    <!--<string name="config_radio_access_family">GSM|WCDMA|LTE</string>-->
 
     <!-- The device supports freeform window management -->
     <bool name="config_freeformWindowManagement">true</bool>
@@ -232,8 +232,8 @@
            0. Strict threshold
            1. Lenient threshold
            2. Custom threshold
-    -->
-    <integer name="config_LTE_RSRP_threshold_type">2</integer>
+    
+    <integer name="config_LTE_RSRP_threshold_type">2</integer> -->
 
     <!-- For performance and storage reasons, limit the number of fingerprints per user -->
     <integer name="config_fingerprintMaxTemplatesPerUser">4</integer>
